--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "keywords": [],
   "main": "src/index.js",
+  "homepage": "https://alaaalmasri12.github.io/todo/",
   "dependencies": {
     "bootstrap": "^4.5.0",
-    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -18,10 +18,11 @@
   },
   "devDependencies": {},
   "scripts": {
+    "test": "react-scripts test --env=jsdom",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
