--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "src/index.js",
   "homepage": "https://alaaalmasri12.github.io/todo/",
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.0.1",
