--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "keywords": [],
   "main": "src/index.js",
-  "homepage": "https://alaaalmasri12.github.io/todo/",
+  "homepage": "/",
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
